fix(search-bar): stretch input to full width, correct icon alignment & visibility when highlighted
(cherry picked from commit 46d023f77b3dee66471c3e3513df8fed3dec946c)

--- a/projects/extra-clarity/search-bar/src/search-bar.component.scss
+++ b/projects/extra-clarity/search-bar/src/search-bar.component.scss
@@ -8,14 +8,20 @@
 :host ::ng-deep {
   .clr-form-control {
     margin-top: 0;
+
+    &.active {
+      background-color: var(--clr-color-action-50, #e3f5fc);
+    }
   }
 
-  .clr-control-container {
-    width: 100%;
+  .clr-control-container,
+  .clr-input-wrapper,
+  .clr-input-group,
+  .clr-input {
+    width: 100% !important;
   }
 
   .clr-input {
-    width: 100%;
     padding: 0 1.25rem !important;
   }
 }
@@ -33,7 +39,7 @@
 .ec-search-bar-icon {
   position: absolute;
   left: 0.15rem;
-  top: 0.175rem;
+  top: 0.2rem;
 }
 
 .ec-search-bar-clear {
@@ -45,12 +51,4 @@
   padding: 0;
   width: 1rem;
   height: 1rem;
-
-  cds-icon {
-    margin-top: -0.15rem;
-  }
-}
-
-.active {
-  background-color: var(--clr-color-action-50, #e3f5fc);
 }
